working todo app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Redux App</title>
 </head>
 <body>
-    <h3>Redux</h3>
+    <h3>Redux Todo</h3>
     <div id="output"></div>
     <script src='bundle.js'></script>
 </body>
